fix: ensure reasons div in status sheet modal is capped off with a max height so sheet does not become too tall

--- a/src/index.css
+++ b/src/index.css
@@ -103,7 +103,7 @@ body:-webkit-scrollbar {
 }
 
 .scrollable-container::-webkit-scrollbar {
-  width: 5px;
+  width: 3px;
 }
 
 .scrollable-container::-webkit-scrollbar-track {
